[package]
name = "integration_tests"
version = "0.0.1"
authors = [ "The Servo Project Developers", "Johannes Willbold <johannes.willbold@gmail.com>" ]
build = "build.rs"
publish = false
edition = "2018"

[lib]
doctest = false
test = true

[features]

# Use unstable features to optimize space and time (memory and CPU usage).
unstable = []

[dependencies]
unicase_string_cache = { version = "0.8", path = ".." }

[dev-dependencies]
rand = "0.7"
unicase_string_cache_codegen = { version = "0.5", path = "../string-cache-codegen" }

[build-dependencies]
unicase_string_cache_codegen = { version = "0.5", path = "../string-cache-codegen" }
